Set foundation for Facade, EntityManager, and EntityBehavior scripts.

--- a/Assets/Simulation/SimulationAssembly.asmdef
+++ b/Assets/Simulation/SimulationAssembly.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Simulation",
+    "name": "SimulationAssembly",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
